spade-tests/src/snapshots/spade_tests__ast_lowering__duplicate_item_names3.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn a() -> bool {
    true
}
struct a{}


error: Multiple items with the same name
  ┌─ testinput:1:4
  │
1 │ fn a() -> bool {
  │    ^ a is defined multiple times
  ·
4 │ struct a{}
  │ ---------- Previous definition here


